add destroy method and update default contact

--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -5,10 +5,6 @@
         = f.label :phone, :class=> "form-label"
         .form-controls
           = f.text_field :phone
-      .form-group
-        = f.label :default, :class=> "form-label"
-        .form-controls
-          = f.check_box :default      
       .form-controls
         = f.button :submit, class: "btn btn-primary"
-        = link_to "cancel", agent_path(@agent),:class => "btn btn-default"
+        = link_to "cancel", agents_path,:class => "btn btn-default"
