--- a/app/views/agents/index.html.haml
+++ b/app/views/agents/index.html.haml
@@ -16,4 +16,4 @@
                 %td=agent.default_contact
                 %td
                   =link_to "Edit", edit_agent_path(agent), class: "btn btn-primary"
-                  = link_to "Delete", agent_path(agent), method: :delete, :confirm=>"Are you sure to delete contact?", class: "btn btn-danger"
+                  = link_to "Delete", agent_path(agent), method: :delete, :confirm=>"Are you sure to delete contact?", class: "btn btn-mini btn-danger"
